--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>belajar javascript</title>
+    <title>javascript</title>
     <script src="js/javascript.js"> </script>
 </head>
 <body>
-    <script>
-        alert("cara penulisan js");
-    </script>
+    <h1 onclick="tampil()">klik aku</h1>
 </body>
 </html>
